[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Jura-DemiBold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Cyberpunk.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/VideoPlayer.gd" type="Script" id=3]
[ext_resource path="res://scripts/LoginForm.gd" type="Script" id=4]
[ext_resource path="res://assets/Music - 35889.webm" type="VideoStream" id=5]
[ext_resource path="res://assets/Jura-Medium.otf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/LoginPanel.gd" type="Script" id=7]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 5 )
autoplay = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginPanels" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -435.0
margin_top = -126.0
margin_right = -1.0
margin_bottom = -13.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackRect" type="ColorRect" parent="LoginPanels"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -220.0
margin_top = -59.0
margin_right = -2.0
margin_bottom = -5.0
color = Color( 0.8, 0.141176, 0.792157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrontRect" type="ColorRect" parent="LoginPanels"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -226.0
margin_top = -54.0
margin_right = -9.0
margin_bottom = 2.0
color = Color( 0.270588, 0.807843, 0.619608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="Label" parent="LoginPanels/FrontRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.5
margin_top = 8.0
margin_right = 96.5
margin_bottom = 29.0
custom_fonts/font = SubResource( 3 )
text = "You Are Not Logged In"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignInOut" type="Label" parent="LoginPanels/FrontRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -61.2323
margin_top = 29.0
margin_right = 89.7677
margin_bottom = 55.0
custom_fonts/font = SubResource( 4 )
text = "Click Here to Sign In"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginForm" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -299.251
margin_right = 512.0
margin_bottom = 300.749
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackRect" type="ColorRect" parent="LoginForm"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.769
margin_top = -152.247
margin_right = 132.231
margin_bottom = 152.753
color = Color( 0, 0, 0, 0.776471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLabel" type="Label" parent="LoginForm/BackRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.899
margin_top = -29.4835
margin_right = -0.898315
margin_bottom = -10.4835
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="LoginForm/BackRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.224
margin_top = -98.7542
margin_right = -1.22379
margin_bottom = -80.7542
text = "Username"

[node name="HeaderLabel" type="Label" parent="LoginForm/BackRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.794
margin_top = -139.962
margin_right = 111.206
margin_bottom = -117.962
text = "Login"
align = 1

[node name="LoginButton" type="Button" parent="LoginForm/BackRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.7881
margin_top = 59.5101
margin_right = 65.2119
margin_bottom = 79.5101
text = "Login"

[node name="PasswordField" type="LineEdit" parent="LoginForm/BackRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -10.5
margin_right = 103.0
margin_bottom = 13.5
secret = true
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameField" type="LineEdit" parent="LoginForm/BackRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.753
margin_top = -74.2525
margin_right = 106.247
margin_bottom = -50.2525
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="LoginForm/BackRect"]

[node name="XButton" type="Button" parent="LoginForm/BackRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 91.5372
margin_top = -140.51
margin_right = 113.537
margin_bottom = -120.51
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressStart" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.025
margin_top = -30.3699
margin_right = 128.975
margin_bottom = 30.6301
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Press Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -481.912
margin_top = -161.034
margin_right = 478.088
margin_bottom = -16.0337
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.92549, 0.152941, 0.839216, 1 )
text = "Cyberfunk"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finished" from="VideoPlayer" to="VideoPlayer" method="_on_VideoPlayer_finished"]
[connection signal="gui_input" from="LoginPanels/FrontRect" to="LoginPanels" method="_on_FrontRect_gui_input"]
[connection signal="mouse_entered" from="LoginPanels/FrontRect" to="LoginPanels" method="_on_FrontRect_mouse_entered"]
[connection signal="mouse_exited" from="LoginPanels/FrontRect" to="LoginPanels" method="_on_FrontRect_mouse_exited"]
[connection signal="ready" from="LoginForm" to="LoginForm" method="_on_LoginForm_ready"]
[connection signal="pressed" from="LoginForm/BackRect/LoginButton" to="LoginForm" method="_on_LoginButton_pressed"]
[connection signal="request_completed" from="LoginForm/BackRect/HTTPRequest" to="LoginForm" method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="LoginForm/BackRect/XButton" to="LoginForm" method="_on_XButton_pressed"]
